update service and add threads